--- a/index.html
+++ b/index.html
@@ -80,6 +80,26 @@
                                 <li>IDE: InteliJ</li>
                                 <li>VCS: git</li>
                             </ul>
+
+                            <div id="carouselExampleIndicators" class="carousel slide span12" data-ride="carousel">
+                                <div class="row">
+                                    <ol class="carousel-indicators">
+                                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                                        <li data-target="#carouselExampleIndicators1" data-slide-to="1"></li>
+                                    </ol>
+                                </div>
+                                <div class="row">
+                                    <div class="carousel-inner" role="listbox">
+                                        <div class="carousel-item active">
+                                            <img class="d-block img-fluid" src="img/Slide1.PNG" alt="First slide">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img class="d-block img-fluid" src="img/Slide2.PNG" alt="Second slide">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
                             <p>MYGE stands for "Moyo-gae", which means changing interior arrangement in Japanese. This application helps you to think about how to allocate the pieces of furniture in your room visually. You can set the sizes of the floor and items in your room and move them freely. Just measure the size of your room and furniture, then enjoy "Moyo-gae"! 
                             </p>
                             <p>
@@ -105,6 +125,7 @@
                                     </button>
                                 </a> 
                             </p>
+
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2020 - Present</span></div>
                     </div>
@@ -216,5 +237,29 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+
+        <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+        <script>
+        window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')
+        </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/holder/2.9.4/holder.min.js"></script>
+        <script>
+        $(function() {
+            Holder.addTheme("thumb", {
+                background: "#55595c",
+                foreground: "#eceeef",
+                text: "Thumbnail"
+            });
+            $('#myCarousel').carousel({
+                // Options
+            });
+        });
+        </script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+        <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+
+
     </body>
 </html>
