--- a/index.html
+++ b/index.html
@@ -72,13 +72,12 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">MYGE - Moyogae -</h3>
                             <div class="subheading mb-3">standalone application</div>
-                            <p>
-                                <a class="social-icon" href="https://github.com/alisazoo/MYGE"><i class="fab fa-github"></i></a>
-                            </p>
-                            <ul>
-                                <li>Language: Java</li>
-                                <li>IDE: InteliJ</li>
-                                <li>VCS: git</li>
+
+                            <ul class="list-inline">
+                                <li class="list-inline-item">Code: <a class="social-icon" href="https://github.com/alisazoo/MYGE"><i class="fab fa-github"></i></a></li>
+                                <li class="list-inline-item">Language: Java</li>
+                                <li class="list-inline-item">IDE: IntelliJ</li>
+                                <li class="list-inline-item">VCS: git</li>
                             </ul>
 
                             <div id="carouselExampleIndicators" class="carousel slide span12" data-ride="carousel">
