Change icon color and fix margin bellow slideshow.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <br />In the near future, I would like to contribute to improving people's lives, especially the Japanese working environment, based on my experience in the HR field and knowledge from occupational psychology.                    </p>
                     <p>
                         御覧いただきありがとうございます。私は技術で課題解決ができるITエンジニアを目指しており、現在はJavaをメインに日々プロジェクトを進めています。
-                        将来は、制作企画や人事採用についての知識や経験を活かし、働き方の改善など人々の生活をより良くしていける仕事がしたいです。
+                        将来は、制作企画や人事採用についての知識や経験を活かし、働き方の改善など、人々の生活をより良くしていける仕事に関わりたいと思っています。
                     </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://github.com/alisazoo"><i class="fab fa-github"></i></a>
@@ -73,8 +73,11 @@
                             <h3 class="mb-0">MYGE - Moyogae -</h3>
                             <div class="subheading mb-3">standalone application</div>
 
+                            <p>
+                                <a class="social-icon-md" href="https://github.com/alisazoo/MYGE"><i class="fab fa-github"></i></a>
+                            </p>
+                            
                             <ul class="list-inline">
-                                <li class="list-inline-item">Code: <a class="social-icon" href="https://github.com/alisazoo/MYGE"><i class="fab fa-github"></i></a></li>
                                 <li class="list-inline-item">Language: Java</li>
                                 <li class="list-inline-item">IDE: IntelliJ</li>
                                 <li class="list-inline-item">VCS: git</li>
@@ -145,7 +148,7 @@
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-bootstrap"></i></li>
                         <li class="list-inline-item"><i class="fab fa-git"></i></li>
-
+                        <li class="list-inline-item"><i class="fab fa-github"></i></li>
 
                     </ul>
                     <div class="subheading mb-3">Experience (Java)</div>
