--- a/indexJP.html
+++ b/indexJP.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="jp">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -28,9 +28,9 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#project">Project</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#project">プロジェクト</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">スキル</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">学歴</a></li>
                 </ul>
             </div>
         </nav>
@@ -45,15 +45,17 @@
                         A. 
                         <span class="text-primary">Shinozuka</span>
                     </h1>
-                    <div class="subheading mb-5">
-                        Living actually in Saitama Japan, virtually anywhere!   
-                        <a href="mailto:zooarisazoo@gmail.com">contact me</a>
+                    <div class="subheading mb-5">   
+                        ご連絡は
+                        <a href="mailto:zooarisazoo@gmail.com">こちら</a>
+                        からお願いします。
                     </div>
                     <p class="lead mb-5">
-                        I am a junior software developer, who loves to play with Java (so far). I have a real passion for developing my skills and enjoy thinking to solve problems from a tiny maze to social issues.
-                        <br />In the near future, I would like to contribute to improving people's lives, especially the Japanese working environment, based on my experience in the HR field and knowledge from occupational psychology.                    </p>
+                        ご覧いただきありがとうございます。私は技術で課題解決ができるITエンジニアを目指しており、現在はJavaをメインに日々プロジェクトを進めています。
+                        将来は、制作企画や人事採用についての知識や経験を活かし、働き方の改善など、人々の生活をより良くしていける仕事に関わりたいと思っています。
+                    </p>
                     <p>
-                        <a href="indexJP.html">日本語版はこちら</a>
+                        <a href="index.html">English</a>
                     </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://github.com/alisazoo"><i class="fab fa-github"></i></a>
@@ -69,15 +71,15 @@
                     <h2 class="mb-5">Project</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">MYGE - Moyogae -</h3>
-                            <div class="subheading mb-3">standalone application</div>
+                            <h3 class="mb-0">MYGE -もようがえ-</h3>
+                            <div class="subheading mb-3">スタンドアローン型アプリケーション</div>
 
                             <p>
                                 <a class="social-icon-md" href="https://github.com/alisazoo/MYGE"><i class="fab fa-github"></i></a>
                             </p>
                             
                             <ul class="list-inline">
-                                <li class="list-inline-item">Language: Java</li>
+                                <li class="list-inline-item">言語: Java</li>
                                 <li class="list-inline-item">IDE: IntelliJ</li>
                                 <li class="list-inline-item">VCS: git</li>
                             </ul>
@@ -101,15 +103,17 @@
                                 </div>
                             </div>
 
-                            <p>MYGE stands for "Moyo-gae", which means changing interior arrangement in Japanese. This application helps you to think about how to allocate the pieces of furniture in your room visually. You can set the sizes of the floor and items in your room and move them freely. Just measure the size of your room and furniture, then enjoy "Moyo-gae"! 
+                            <p>このアプリケーションは、模様替えのプラン作りを手助けします。
+                                <br/>部屋や家具を登録後、画面上で自由にものが動かして、理想の模様替えプランを作りましょう！
+                                <br/>部屋の外に家具を置こうとすると、自動で部屋の中に置きなおしてくれる「自動配置調整機能」付き。
                             </p>
                             <p>
-                                <a href="app/MYGE.jar">
+                                <a href="app/MYGE_JP.jar">
                                     <button type="button" class="btn btn-primary">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-circle" viewBox="0 0 16 16">
                                             <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"/>
                                         </svg>
-                                        Download
+                                        日本語版ダウンロード
                                     </button>
                                 </a> 
                             </p>
@@ -125,8 +129,8 @@
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
+                    <h2 class="mb-5">スキル</h2>
+                    <div class="subheading mb-3">プログラミング言語＆ツール</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-java"></i></li>
                         <li class="list-inline-item"><i class="fab fa-python"></i></li>
@@ -137,35 +141,35 @@
                         <li class="list-inline-item"><i class="fab fa-github"></i></li>
 
                     </ul>
-                    <div class="subheading mb-3">Experience (Java)</div>
+                    <div class="subheading mb-3">経験 (Java)</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Basics of Java
+                            Javaの基礎
                             <ul>
-                                <li>Collections</li>
-                                <li>Exception handling</li>
-                                <li>Basics of multithreading</li>
-                                <li>Lambda expression</li>
-                                <li>Basics of streams</li>
-                                <li>functional interfaces, etc.</li>
+                                <li>コレクション</li>
+                                <li>例外処理</li>
+                                <li>マルチスレッド処理の基礎</li>
+                                <li>ラムダ式</li>
+                                <li>ストリームの基礎</li>
+                                <li>ファンクショナルインターフェース　等々</li>
                             </ul>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Object-oriented programming
+                            オブジェクト指向プログラミング
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            GUI programming
+                            GUIプログラミング
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Project with MVC framework
+                            MVCフレームワークを用いたプロジェクト
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Version control experience (git)
+                            バージョンコントロールシステムの利用経験
                         </li>
                     </ul>
                 </div>
@@ -180,30 +184,30 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of People, US</h3>
-                            <div class="subheading mb-3">Bachelor of Computer Science</div>
+                            <h3 class="mb-0">University of People, US（ピープル大学）</h3>
+                            <div class="subheading mb-3">学士：コンピューターサイエンス</div>
                             <!-- <p>GPA: 3.09</p> -->
-                            <p>Since June 2020, I have studied at this online university. </p>
+                            <p>2020年6月より、オンラインでの学位取得に挑戦中。</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">June 2020 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2020年6月 - 現在（在学中）</span></div>
                     </div>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Leeds, UK</h3>
-                            <div class="subheading mb-3">GDip of Business Psychology</div>
-                            <p>Studied and learnt how to tackle issues in a workplace from psychological perspectives, which can cover studying employee attitudes and behaviour, evaluation of individual performance, recruitment process, change management etc.</p>
+                            <h3 class="mb-0">University of Leeds, UK（リーズ大学）</h3>
+                            <div class="subheading mb-3">準修士：組織心理学</div>
+                            <p>職場環境での課題について心理学的観点から考察。働く人の態度や行動、パフォーマンス評価、採用プロセスやチェンジマネジメントなど、関連分野について広く学ぶ。</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2017 - September 2018</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2017年9月 - 2018年9月</span></div>
                     </div>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between  mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Tsuda, Japan</h3>
-                            <div class="subheading mb-3">Bachelar of Liberal Arts</div>
-                            <p>Joined Media Studies Couse: studied Media studies and create an original documentary about street art in Tokyo.</p>
+                            <h3 class="mb-0">津田塾大学</h3>
+                            <div class="subheading mb-3">学士：リベラルアーツ</div>
+                            <p>3年次よりメディアスタディーズコースに在籍し、メディア論を学び、ドキュメンタリー作成を行う。</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">April 2006 - March 2011</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2006年4月 - 2011年3月</span></div>
                     </div>
 
                 </div>
