--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             </p>
 
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">June 2020 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2020 - July 2020</span></div>
                     </div>
                 </div>
             </section>
