--- a/indexJP.html
+++ b/indexJP.html
@@ -119,7 +119,7 @@
                             </p>
 
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">June 2020 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2020 - July2020</span></div>
                     </div>
                 </div>
             </section>
