add latest information (as of Dec, 2021)

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                 </div>
                             </div>
 
-                            <p>MYGE stands for "Moyo-gae", which means changing interior arrangement in Japanese. This application helps you to think about how to allocate the pieces of furniture in your room visually. You can set the sizes of the floor and items in your room and move them freely. Just measure the size of your room and furniture, then enjoy "Moyo-gae"! 
+                            <p>MYGE stands for "Moyo-gae", which means changing interior arrangement in Japanese. This application helps you to think about how to allocate the pieces of furniture in your room visually. You can set the sizes of the floor and items in your room and move them freely. Just measure the size of your room and furniture, then enjoy "Moyo-gae"! <a href="myge.html">link</a> 
                             </p>
                             <p>
                                 <a href="app/MYGE.jar">
@@ -137,40 +137,71 @@
                         <li class="list-inline-item"><i class="fab fa-github"></i></li>
 
                     </ul>
-                    <div class="subheading mb-3">Experience (Java)</div>
+                    <div class="subheading">Experience (around Java)</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Basics of Java
+                            Object-oriented Programming
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            GUI Programming
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Project with MVC Framework
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Servlet & JSP
+                        </li>
+                    </ul>
+                    <div class="subheading">Other Experience</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Content Planning (Writing, Video Lectures)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Content Direction (Recruitment, Company Promotion)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Direct Recruiting
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Practical Training Optimization
+                        </li>
+                    </ul>
+                    <div class="subheading">Knowledge</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Basics of Computer System
                             <ul>
-                                <li>Collections</li>
-                                <li>Exception handling</li>
-                                <li>Basics of multithreading</li>
-                                <li>Lambda expression</li>
-                                <li>Basics of streams</li>
-                                <li>functional interfaces, etc.</li>
+                                <li>Logic Circuits</li>
+                                <li>Assembly Language (Hack, Z-80)</li>
+                                <li>Machine Language (Hack, Z-80)</li>
                             </ul>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Object-oriented programming
+                            Basics of Networking (TCP/IP)
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            GUI programming
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Project with MVC framework
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Version control experience (git)
+                            Organisational Psychology
+                            <ul>
+                                <li>Motivation Management</li>
+                                <li>Recruitment & Training</li>
+                                <li>Change Management etc.</li>
+                            </ul>
                         </li>
                     </ul>
                 </div>
-            </section>
-            
+            </section>        
 
             <hr class="m-0" />
 
