--- a/indexJP.html
+++ b/indexJP.html
@@ -141,20 +141,9 @@
                         <li class="list-inline-item"><i class="fab fa-github"></i></li>
 
                     </ul>
-                    <div class="subheading mb-3">経験 (Java)</div>
+                    <div class="subheading">経験 (Java)</div>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Javaの基礎
-                            <ul>
-                                <li>コレクション</li>
-                                <li>例外処理</li>
-                                <li>マルチスレッド処理の基礎</li>
-                                <li>ラムダ式</li>
-                                <li>ストリームの基礎</li>
-                                <li>ファンクショナルインターフェース　等々</li>
-                            </ul>
-                        </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             オブジェクト指向プログラミング
@@ -169,12 +158,47 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            バージョンコントロールシステムの利用経験
+                            Servlet・JSP
+                        </li>
+                    </ul>
+
+                    <div class="subheading">その他の経験</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            コンテンツ企画（記事制作・作成、レクチャー映像制作・作成）
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            コンテンツディレクション（採用、企業広報）
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            ダイレクトリクルーティング
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            実践的な研修の企画
+                        </li>
+                    </ul>
+                    <div class="subheading">知識</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            コンピューターシステムの基礎
+                            <ul>
+                                <li>論理回路</li>
+                                <li>アッセンブリ言語プログラミング (Hack, Z-80)</li>
+                                <li>マシン語プログラミング (Hack, Z-80)</li>
+                            </ul>
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            ネットワークの基礎 (TCP/IP)
                         </li>
                     </ul>
                 </div>
             </section>
-            
 
             <hr class="m-0" />
 
@@ -185,9 +209,9 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">University of People, US（ピープル大学）</h3>
-                            <div class="subheading mb-3">学士：コンピューターサイエンス</div>
+                            <div class="subheading mb-3">学士：コンピューターサイエンス（予定）</div>
                             <!-- <p>GPA: 3.09</p> -->
-                            <p>2020年6月より、オンラインでの学位取得に挑戦中。</p>
+                            <p>2020年6月よりオンラインでの学位取得中。Java・Pythonによるプログラミングの基礎に加え、コンピューターシステムやネットワークなどについて学習中。</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2020年6月 - 現在（在学中）</span></div>
                     </div>
@@ -196,7 +220,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">University of Leeds, UK（リーズ大学）</h3>
                             <div class="subheading mb-3">準修士：組織心理学</div>
-                            <p>職場環境での課題について心理学的観点から考察。働く人の態度や行動、パフォーマンス評価、採用プロセスやチェンジマネジメントなど、関連分野について広く学ぶ。</p>
+                            <p>心理学的観点から、組織内の人の行動について学ぶ。ウェルビーイングやモチベーション、行動特性、パフォーマンス評価、採用プロセスやチェンジマネジメントなど、関連分野を広く含む。</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2016年9月 - 2017年9月</span></div>
                     </div>
