add project 1 page, breadcrumb

--- a/index3.html
+++ b/index3.html
@@ -32,7 +32,7 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 				<li class="nav-item">
-					<a class="nav-link" href="#project">PROJECT</a>
+					<a class="nav-link" href="#project">PROJECTS</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#skills">SKILLS & EXPERIENCE</a>
@@ -45,6 +45,7 @@
 
 	  </nav>
 
+	<div class="container">
 	<div class="container-fluid">
 
 		<!-- Introduciton -->
@@ -69,11 +70,53 @@
 		<section class="resume-section" id="project">
 			<div class="row">
 			<div class="col">
-				<h2>PROJECT</h2>
 
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro unde dolores doloribus quos vitae deserunt quasi explicabo vero architecto, quaerat excepturi possimus. Consectetur excepturi aliquid nulla optio recusandae a ipsa!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi sit repudiandae quaerat eum voluptatibus a tempora odio rem ratione velit aspernatur, ducimus laboriosam est unde omnis id provident, magni fugiat.</p>			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro unde dolores doloribus quos vitae deserunt quasi explicabo vero architecto, quaerat excepturi possimus. Consectetur excepturi aliquid nulla optio recusandae a ipsa!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi sit repudiandae quaerat eum voluptatibus a tempora odio rem ratione velit aspernatur, ducimus laboriosam est unde omnis id provident, magni fugiat.</p>			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro unde dolores doloribus quos vitae deserunt quasi explicabo vero architecto, quaerat excepturi possimus. Consectetur excepturi aliquid nulla optio recusandae a ipsa!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi sit repudiandae quaerat eum voluptatibus a tempora odio rem ratione velit aspernatur, ducimus laboriosam est unde omnis id provident, magni fugiat.</p>
+				<h2>PROJECTS</h2>
 
-			</div>
+				<div class="wrap">
+					<div class="tile">
+						<img src="img/faniture-sq.jpg" alt="">
+						
+						<div class="text">
+							<h3>GUI</h3>
+							<h4 class="animate-text">MYGE-Moyogae-</h4>
+							<p class="animate-text">This  provides vidual aid to plan the interior allocation. <a href="moyogae.html"><i class="far fa-angle-double-right"></i></i></a>
+							</p>
+						</div>
+					</div>
+
+					<div class="tile">
+						<img src="img/code-sq.jpg" alt="">
+						<div class="text">
+							<h3>Spring Boot</h3>
+							<h4 class="animate-text">Tokyo Dome Calculator</h4>
+							<p class="animate-text">This helps you to know how large it is, based on the size of the Tokyo dome.</p>
+						</div>
+					</div>
+
+					<div class="tile">
+						<img src="img/networking-sq.jpg" alt="">
+						<div class="text">
+							<h3>Chat program</h3>
+							<h4 class="animate-text">Chatting Application</h4>
+							<p class="animate-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro unde dolores doloribus quos vitae deserunt quasi explicabo vero architecto, quaerat excepturi possimus. </p>
+						</div>
+					</div>
+
+					<div class="tile">
+						<img src="img/networking-sq.jpg" alt="">
+						<div class="text">
+							<h3>Chat program2</h3>
+							<h4 class="animate-text">Chatting Application</h4>
+							<p class="animate-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro unde dolores doloribus quos vitae deserunt quasi explicabo vero architecto, quaerat excepturi possimus. </p>
+						</div>
+					</div>
+
+				</div>
+
+
+				</div>
+
 			</div>
 		</section>
 
@@ -95,14 +138,58 @@
 		<section class="resume-section" id="education">
 			<div id="education" class="row">
 			<div class="col">
-				<h2>EDUCATION & CERTIFICATE</h2>
+				<!-- <h2>EDUCATION & CERTIFICATE</h2> -->
 
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro unde dolores doloribus quos vitae deserunt quasi explicabo vero architecto, quaerat excepturi possimus. Consectetur excepturi aliquid nulla optio recusandae a ipsa!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi sit repudiandae quaerat eum voluptatibus a tempora odio rem ratione velit aspernatur, ducimus laboriosam est unde omnis id provident, magni fugiat.</p>			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro unde dolores doloribus quos vitae deserunt quasi explicabo vero architecto, quaerat excepturi possimus. Consectetur excepturi aliquid nulla optio recusandae a ipsa!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi sit repudiandae quaerat eum voluptatibus a tempora odio rem ratione velit aspernatur, ducimus laboriosam est unde omnis id provident, magni fugiat.</p>		
+					<div class="resume-section-content">
+						<h2 class="mb-5">EDUCATION & CERTIFICATE</h2>
+
+						<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+							<div class="flex-grow-1">
+								<h3 class="mb-0">Google IT Support Professional Certificate, Google</h3>
+								<div class="subheading mb-3">Google</div>
+								<p>
+									Debugging, Encryption Algorithms and Techniques, Customer Service, Network Protocols, Cloud Computing, Binary Code, Customer Support, Linux, Troubleshooting, Domain Name System (DNS), Ipv4, Network Model
+								</p>
+							</div>
+							<div class="flex-shrink-0"><span class="text-primary">Decempber 2021 - January 2022</span></div>
+						</div>
+
+						<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+							<div class="flex-grow-1">
+								<h3 class="mb-0">University of People, US</h3>
+								<div class="subheading mb-3">Bachelor of Computer Science</div>
+								<!-- <p>GPA: 3.22</p> -->
+								<p>Since June 2020, I have studied at this online university. </p>
+							</div>
+							<div class="flex-shrink-0"><span class="text-primary">June 2020 - Present</span></div>
+						</div>
+	
+						<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+							<div class="flex-grow-1">
+								<h3 class="mb-0">University of Leeds, UK</h3>
+								<div class="subheading mb-3">GDip of Business Psychology</div>
+								<p>Studied and learnt how to tackle issues in a workplace from psychological perspectives, which can cover studying employee attitudes and behaviour, evaluation of individual performance, recruitment process, change management etc.</p>
+							</div>
+							<div class="flex-shrink-0"><span class="text-primary">September 2016 - September 2017</span></div>
+						</div>
+	
+						<div class="d-flex flex-column flex-md-row justify-content-between  mb-5">
+							<div class="flex-grow-1">
+								<h3 class="mb-0">University of Tsuda, Japan</h3>
+								<div class="subheading mb-3">Bachelar of Liberal Arts</div>
+								<p>Joined Media Studies Couse: studied Media studies and create an original documentary about street art in Tokyo.</p>
+							</div>
+							<div class="flex-shrink-0"><span class="text-primary">April 2006 - March 2011</span></div>
+						</div>
+	
+					</div>
+		
 
 
 			</div>
 		</section>
 	
+	</div>
 	</div>
 
 
