--- a/minitodolist.html
+++ b/minitodolist.html
@@ -15,7 +15,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/mycss.css">
 
-	<title>MYGE -Moyogae-</title>
+	<title>Mini Todo List</title>
 </head>
 
 <body>
@@ -51,9 +51,9 @@
 	<div class="container-fluid">
 
 		<!-- Project introduction -->
-		<section class="resume-section" id="myge-top">
+		<section class="resume-section" id="tdc-top">
 
-			<div class="row" id="myge-intro">
+			<div class="row" id="tdc-intro">
 
 				<div class="breadcrumb">
 					<p><a href="index.html">Home</a>
@@ -64,53 +64,47 @@
 						<svg xmlns="http://www.w3.org/2000/svg" width=0.3em height=0.3em fill="currentColor" class="bi bi-chevron-right icon-stamp" viewBox="0 0 16 16">
 							<path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
 						</svg> 
-						MYGE
+						Mini Todo List
 					</p>
 				</div>
 
 				<div class="col">
-					<a href="#myge-img">
-						<img src="img/myge-img.png" alt="" width=400>
+					<a href="#idc-img">
+						<img src="img/todo-view.png" alt="" width=400>
 					</a>
 				</div>
 
 				<div class="col">
-					<h1>MYGE</h1>
-					<h2 class="sub-title">a.k.a Moyo-gae</h2>
-					<cite>
-						"Moyo-gae" means changing interior arrangement in Japanese.
-					</cite>
+					<h1>Mini Todo List</h1>
 					<p>	
-						This application helps you to think about how to allocate the pieces of furniture in your room visually. You can:
-						<ul>
-							<li>Set the sizes of the floor</li>
-							<li>Add your items</li>
-							<li>Move your items freely (even rotate them!)</li>
-						</ul>
+						This todo list helps you to focus on only the tasks that you need to do today and tomorrow, although you can add the tasks in future. You can:
 					</p>
+					<ul>
+						<li>Add new tasks and edit the existing tasks</li>
+						<li>Check the tasks you need to do only today or tommorow</li>
+						<li>Search the tasks</li>
+						<li>Register you as a user</li>
+					</ul>
 
 					<div class="d-flex justify-content-center">
 						<div class="bd-highlight flex-fill">
 							<button type="button" class="btn btn-outline-light">
-								<a href="https://github.com/alisazoo/MYGE" >code</a>
-								 <i class="fab fa-brands fa-github"></i>
+								<a href="https://github.com/alisazoo/miniTodoList" >code</a> <i class="fab fa-brands fa-github"></i>
 							</button>
 						</div>
 
-						<div class="bd-highlight flex-fill">
+						<!-- <div class="bd-highlight flex-fill">
 							<button type="button" class="btn btn-outline-light">
-								<a href="app/MYGE.jar" >jar.file</a>
- 								 <i class="fas fa-arrow-alt-circle-down"></i>
-							</button>
-						</div>
-						<!-- <div class="bd-highlight  flex-fill">
-							<button type="button" class="btn btn-outline-light">
-								<a href="#myge-skills" >skills</a> <i class="fas fa-edit"></i></i>
+								<a href="https://simple-tokyodome-calc.herokuapp.com/place_list" >link</a> 
+								<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
+									<path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5z"/>
+									<path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0v-5z"/>
+								  </svg>
 							</button>
 						</div> -->
 						<div class="bd-highlight  flex-fill">
 							<button type="button" class="btn btn-outline-light">
-								<a href="#myge-img" >app images</a> <i class="fas fa-image"></i>
+								<a href="#tdc-img" >app images</a> <i class="fas fa-image"></i>
 							</button>
 						</div>
 					</div>
@@ -119,24 +113,25 @@
 
 				<div class="row sub-row">
 					<div class="col">
-						<h2>TECHNOLOGY USED</h2>			
+						<h2>TECHNOLOGY USED</h2>
 						<ul>
-							<li>Language: Java</li>
+							<li>Language: Java 11</li>
+							<li>Database: MySQL 8.0.27</li>
+							<li>Server: Tomcat 9.0.54</li>
+							<!-- <li>PaaS: Haroku</li> -->
 							<li>VCS: git</li>
 							<li>IDE: IntelliJ</li>
 						</ul>
 					</div>
 					<div class="col">
-						<h2>TECH WRAP-UP</h2>			
+						<h2>TECH WRAP-UP</h2>
 						<ul>
-							<li>Stand-alone app with GUI</li>
-							<li>Make this app from scratch, including the logic for:
-								<ul>
-									<li>calculating the corresponding size to fit in the floor area</li>
-									<li>handling the location (moving and rotating)</li>
-								</ul>
+							<li>Web application developped with JSP and Servlet (Tomcat)
 							</li>
-							<li>Used Object-oriented programming</li>
+							<li>
+								Design and optimise database with utilising foreign key and SQL to search
+							</li>
+							<li>Implemented with user registration and login function</li>
 						</ul>
 					</div>
 
@@ -147,7 +142,7 @@
 								<path fill-rule="evenodd" d="M12.354 1.646a.5.5 0 0 1 0 .708L6.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
 							  </svg>
 						</a>
-						<a href="#myge-img">
+						<a href="#tdc-img">
 							<svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-chevron-double-down icon" viewBox="0 0 16 16">
 								<path fill-rule="evenodd" d="M1.646 6.646a.5.5 0 0 1 .708 0L8 12.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
 								<path fill-rule="evenodd" d="M1.646 2.646a.5.5 0 0 1 .708 0L8 8.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
@@ -163,7 +158,7 @@
 
 		<!-- App Images -->
 		<section class="resume-section">
-			<div id="myge-img" class="row">
+			<div id="tdc-img" class="row">
 			<div class="col">
 
 				<h2>App Images</h2>
@@ -177,27 +172,27 @@
 
 					<div class="carousel-inner">
 
-						<div class="carousel-item active">
-							<img src="img/myge-img.png" class="d-block w-100" alt="...">
-							<!-- <div class="carousel-caption d-none d-md-block">
-							  <h5>First slide label</h5>
-							  <p>Some representative placeholder content for the first slide.</p>
-							</div> -->
-						</div>
-
-					  <div class="carousel-item">
-						<img src="img/Slide1.PNG" class="d-block w-100" alt="...">
+					  <div class="carousel-item active">
+						<img src="img/todo-view.png" class="d-block w-100" alt="...">
 						<!-- <div class="carousel-caption d-none d-md-block">
-						  <h5>First slide label</h5>
-						  <p>Some representative placeholder content for the first slide.</p>
+						  <h5>List View</h5>
+						  <p>Summarise the result of the default data.</p>
 						</div> -->
 					  </div>
 
 					  <div class="carousel-item">
-						<img src="img/Slide2.PNG" class="d-block w-100" alt="...">
+						<img src="img/todo-login.png" class="d-block w-100" alt="...">
 						<!-- <div class="carousel-caption d-none d-md-block">
-						  <h5>Second slide label</h5>
+						  <h5>Add new places</h5>
 						  <p>Some representative placeholder content for the second slide.</p>
+						</div> -->
+					  </div>
+
+					  <div class="carousel-item">
+						<img src="img/todo-add.png" class="d-block w-100" alt="...">
+						<!-- <div class="carousel-caption d-none d-md-block">
+						  <h5>Edit the existing place information</h5>
+						  <p>You can update the informatio.</p>
 						</div> -->
 					  </div>
 
@@ -212,22 +207,23 @@
 					</button>
 				  </div>
 				  
-				  
-				  <div class="chevron">
-					<a href="index.html#project">
-						<svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-chevron-double-left icon" viewBox="0 0 16 16">
-							<path fill-rule="evenodd" d="M8.354 1.646a.5.5 0 0 1 0 .708L2.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
-							<path fill-rule="evenodd" d="M12.354 1.646a.5.5 0 0 1 0 .708L6.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
-						  </svg>
-					</a>
-					<a href="#myge-top">
-						<svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-arrow-bar-up icon" viewBox="0 0 16 16">
-							<path fill-rule="evenodd" d="M8 10a.5.5 0 0 0 .5-.5V3.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 3.707V9.5a.5.5 0 0 0 .5.5zm-7 2.5a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13a.5.5 0 0 1-.5-.5z"/>
-						</svg>
-					</a>
-				</div>
-
 			</div>
+
+			<div class="chevron">
+				<a href="index.html#project">
+					<svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-chevron-double-left icon" viewBox="0 0 16 16">
+						<path fill-rule="evenodd" d="M8.354 1.646a.5.5 0 0 1 0 .708L2.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
+						<path fill-rule="evenodd" d="M12.354 1.646a.5.5 0 0 1 0 .708L6.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
+					  </svg>
+				</a>
+				<a href="#tdc-top">
+					<svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-arrow-bar-up icon" viewBox="0 0 16 16">
+						<path fill-rule="evenodd" d="M8 10a.5.5 0 0 0 .5-.5V3.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 3.707V9.5a.5.5 0 0 0 .5.5zm-7 2.5a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13a.5.5 0 0 1-.5-.5z"/>
+					</svg>
+				</a>
+			</div>
+
+
 		</section>
 	
 	</div>
