--- a/tdc.html
+++ b/tdc.html
@@ -13,7 +13,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
 	<!-- Bootstrap CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-	<link rel="stylesheet" href="css/mycss3.css">
+	<link rel="stylesheet" href="css/mycss.css">
 
 	<title>Tokyo Dome Calculator</title>
 </head>
@@ -22,7 +22,7 @@
 
 	<nav id="sideNav" class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark align-items-center">
 
-		<a class="navbar-brand" href="index3.html">
+		<a class="navbar-brand" href="index.html">
 			<img src="img/logo.png" alt="logotype" height="50">
 		</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,13 +33,13 @@
 			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
 				<li class="nav-item">
-					<a class="nav-link" href="index3.html#project">PROJECTS</a>
+					<a class="nav-link" href="index.html#project">PROJECTS</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="index3.html#skills">SKILLS & EXPERIENCE</a>
+					<a class="nav-link" href="index.html#skills">SKILLS & EXPERIENCE</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="index3.html#education">EDUCATION & CERTIFICATE</a>
+					<a class="nav-link" href="index.html#education">EDUCATION & CERTIFICATE</a>
 				</li>
 
 			</ul>
@@ -56,11 +56,11 @@
 			<div class="row" id="tdc-intro">
 
 				<div class="breadcrumb">
-					<p><a href="index3.html">Home</a>
+					<p><a href="index.html">Home</a>
 						<svg xmlns="http://www.w3.org/2000/svg" width=0.3em height=0.3em fill="currentColor" class="bi bi-chevron-right icon-stamp" viewBox="0 0 16 16">
 							<path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
 						</svg>
-						<a href="index3.html#project">Projects</a>
+						<a href="index.html#project">Projects</a>
 						<svg xmlns="http://www.w3.org/2000/svg" width=0.3em height=0.3em fill="currentColor" class="bi bi-chevron-right icon-stamp" viewBox="0 0 16 16">
 							<path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
 						</svg> 
@@ -134,7 +134,7 @@
 					</div>
 
 					<div class="chevron">
-						<a href="index3.html#project">
+						<a href="index.html#project">
 							<svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-chevron-double-left icon" viewBox="0 0 16 16">
 								<path fill-rule="evenodd" d="M8.354 1.646a.5.5 0 0 1 0 .708L2.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
 								<path fill-rule="evenodd" d="M12.354 1.646a.5.5 0 0 1 0 .708L6.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
@@ -208,7 +208,7 @@
 			</div>
 
 			<div class="chevron">
-				<a href="index3.html#project">
+				<a href="index.html#project">
 					<svg xmlns="http://www.w3.org/2000/svg" width="45" height="45" fill="currentColor" class="bi bi-chevron-double-left icon" viewBox="0 0 16 16">
 						<path fill-rule="evenodd" d="M8.354 1.646a.5.5 0 0 1 0 .708L2.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
 						<path fill-rule="evenodd" d="M12.354 1.646a.5.5 0 0 1 0 .708L6.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
