- add JP version pages - replace photos with images from UnDrew

--- a/jp/index.html
+++ b/jp/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="icon" type="image/x-icon" href="img/favicon.ico" />
+	<link rel="icon" type="image/x-icon" href="../img/favicon.ico" />
 
 	<!-- Font Awesome icons (free version)-->
 	<script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
@@ -13,7 +13,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
 	<!-- Bootstrap CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-	<link rel="stylesheet" href="css/mycss.css">
+	<link rel="stylesheet" href="../css/mycss.css">
 
 	<title>Arisa Shinozuka</title>
 </head>
@@ -23,7 +23,7 @@
 	<nav id="sideNav" class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark align-items-center">
 
 		<a class="navbar-brand" href="#introduction">
-			<img src="img/logo.png" alt="logotype" height="50">
+			<img src="../img/logo.png" alt="logotype" height="50">
 		</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -57,11 +57,19 @@
 					<div class="social-icons">
 						<a class="social-icon" href="https://github.com/alisazoo"><i class="fab fa-brands fa-github icon"></i></a>
 						<a class="social-icon" href="mailto:zooarisazoo@gmail.com"><i class="fas fa-envelope icon"></i></a>
+						<a href="../index.html"><i class="bi bi-translate icon"></i></a>
 					</div>
 				</div>
 				<div class="col paragraph">
-						<p>Hi! I am a potential software developer, who loves to play with Java. I have a real passion for developing my skills and enjoy thinking to solve problems from a tiny maze to social issues.</p>
-						<p>In the near future, I would like to improve  working environment with technology, utilising my experience in the HR field and my knowledge from occupational psychology.</p>
+					<ul class="intro-list">
+						<li>Javaが好き</li>
+						<li>技術で課題解決できるエンジニアになりたい</li>
+						<li>制作企画・ディレクションの経験あり</li>
+						<li>組織心理学を学び、人事採用分野での経験あり</li>
+						<li>コンピューター・サイエンス専攻＠オンライン大学</li>
+						<li>Google IT Support Professional Certificate</li>
+					</ul>
+					<!-- 私は技術で課題解決ができるITエンジニアを目指しており、現在はJavaをメインに日々プロジェクトを進めています。 将来は、制作企画や人事採用についての知識や経験を活かし、働き方の改善など、人々の生活をより良くしていける仕事に関わりたいと思っています。 -->
 				</div>
 
 				<div class="chevron">
@@ -87,8 +95,8 @@
 					<div class="wrap">
 
 						<div class="tile">
-							<!-- <img src="img/code-sq.jpg" alt=""> -->
-							<img src="img/server_cluster.png" alt="">
+							<!-- <img src="../img/code-sq.jpg" alt=""> -->
+							<img src="../img/server_cluster.png" alt="">
 							<div class="text">
 							<h3>
 								<a href="tdc.html">
@@ -108,7 +116,7 @@
 						</div>
 
 						<div class="tile">
-							<img src="img/interior_design.png" alt="">
+							<img src="../img/interior_design.png" alt="">
 
 							<div class="text">
 								<h3>
@@ -120,7 +128,7 @@
 									<a href="moyogae.html">MYGE-Moyogae-</a></h4>
 								<p class="animate-text">
 									<a href="moyogae.html">
-										This  provides vidual aid to plan the interior allocation.
+										模様替えを手助け!
 									</a>
 								</p>
 								<!-- <a href="moyogae.html" class="animate-text">
@@ -136,7 +144,7 @@
 					<div class="wrap">
 
 						<div class="tile">
-							<img src="img/web_browsing.png" alt="">
+							<img src="../img/web_browsing.png" alt="">
 							<div class="text">
 								<h3>
 									<a href="minitodolist.html">
@@ -156,7 +164,7 @@
 							</div>
 						</div>
 						<!-- <div class="tile">
-							<img src="img/networking-sq.jpg" alt="">
+							<img src="../img/networking-sq.jpg" alt="">
 							<div class="text">
 								<h3>Chat program2</h3>
 								<h4 class="animate-text">Chatting Application</h4>
